# kafka-streams-ml-examples

./: .gitignore  README.md  docker-compose.yml  pom.xml
apriori-recommendation/: README.md  pyproject.toml  requirements.txt
apriori-recommendation/apriori_recommendation/: apriori.py  configuration.py  elastic.py  kafka.py  main.py  recommendation.py  utils.py
entity/: README.md  pom.xml
entity/src/main/java/si/medius/datascience/entity/: Invoice.java  InvoiceStatus.java  Item.java  Segment.java
invoice-transformer/: README.md  pom.xml
invoice-transformer/src/main/java/si/medius/datascience/transformer/: InvoiceSplitterStream.java  StreamConfig.java
invoice-transformer/src/main/resources/: application.yml
kibana_dashboard/: export.ndjson
logstash-conf/pipeline/: logstash.conf
produce-data/: README.md  pom.xml
produce-data/data/: data.csv
produce-data/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
produce-data/src/main/java/si/medius/datascience/kafka/: ProduceResource.java  ProduceService.java  StoreEventProducer.java
produce-data/src/main/resources/: application.yml
